Various changes to support compatibility with Java 9 and code cleanups.